# FunSTLPlayground

./: CMakeLists.txt  README.md  main.cpp
src/: RValue.hpp  allocator.hpp  any.hpp  function.hpp  spin.hpp
